Changelog
=========


2.2.1 (unreleased)
------------------

- Fixed default value setter in extract_attachments.
  Issue #311 E-Mail-Import
  https://extranet.4teamwork.ch/support/ph-vs/tracker/311
  [phgross]

- Fixed order of MIME parts when creating mails in send_documents.
  (Text part first, attachment parts last).
  [lgraf]


2.2 (2012-11-28)
----------------

- Send-document: Adjust documents url with clients public url.
  [phgross]

- Dropped Plone 4.1 compatibility. Only 4.2 and up are supported.
  [lgraf]

- Send Documents: Display documets in a task also in the document contenttree widget.
  Issue #1729 Hinzufuegen-Auswahl in E-Mail-Maske unvollstaendig (aus Aufgaben ref. Doks nicht aufgefuehrt)
  https://extranet.4teamwork.ch/extern/opengever-kanton-zug/sprint-backlog/1729
  [phgross]

- Fixed cancelbutton handling in send documents form.
  [phgross]


2.1 (2012-09-12)
----------------

- Implements documents_as_link field in send_documents functionality.
  Issue #210 E-Mail-Versand ohne Dokument
  https://extranet.4teamwork.ch/support/ph-vs/tracker/210
  [phgross]

- Extract attachments: Added correct reindexing after setting default values.
  Issue #222 Metadaten Standort und Sprache
  https://extranet.4teamwork.ch/support/ph-vs/tracker/222
  [philippegross]

- Adjust mail workflow: Disable sharing actions (delegate roles).
  Issue #1613 Test Rot und Gelb 2.4: Mail hat versehentlich die Aktion Freigabe
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1613
  [phgross]

- Fixed missing argument for get_containg_document_tab_url().
  This fixes a traceback when cancelling send documents form.
  [lgraf]


2.0.4 (2012-06-19)
------------------

- Added filename fallback in content_type_helper for documents with wrong content type.
  [phgross]

- Fixed setting of content-type for attachments in send_documents
  [lgraf]

- Fixed encoding problems in send_documents functionality.